--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,13 @@
 title: Shiplog of Jennings Hanna
 email: jenningshanna@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  A archive or my writing.
+  An archive of my writings and musings.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 twitter_username: jenningshanna
 github_username:  jenningshanna
+dribble_username:  jenningshanna
+medium_username:  jenningshanna
 
 # Build settings
 markdown: kramdown
