--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Shiplog of Jennings Hanna
+title: Jennings Shiplog
 email: jenningshanna@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   An archive of my writings and musings.
