--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@
 
 # Site settings
 title: Jennings Shiplog
+author: Jennings Hanna
 email: jenningshanna@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   An archive of my writings and musings.
