--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Jennings Writing
+title: Jennings Makes Stuff
 author: Jennings Hanna
 email: jenningshanna@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
